Fixed alignment issues where buttons and text (that is smaller) are next to each other.

--- a/src/calendar.js.scss
+++ b/src/calendar.js.scss
@@ -2199,6 +2199,8 @@ div.calendar-tooltip-event {
     div.title {
         font-weight: 900;
         width: calc( 100% - 24px - $spacing );
+        display: flex;
+        align-items: center;
     }
 
     div.date,
