--- a/src/foundation/_view-event.scss
+++ b/src/foundation/_view-event.scss
@@ -25,6 +25,8 @@ div.event {
 
     div.title {
         font-weight: 900;
+        display: flex;
+        align-items: center;
     }
     
     div.date,
